﻿0.1 
- Initial Source by L0RE

...

[B]Version 2.0.1  (01.12.2019)[/B] by realvito[CR]
- optimized: Script komplett überarbeitet und wieder funktionsfähig gemacht, unnötige Passagen entfernt (läuft über die alte API v3) ...
- added: Addon kompatibel mit PYTHON-Vers.3 gemacht (für KODI-19+) :-)
*** für die volle Funktionsfähigkeit unter KODI-Matrix ist das Addon - script.common.plugin.cache - mindestens in der Version 2.6.0 erforderlich ***