@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" standalone="yes"?>
-<addon id="plugin.video.rtlnow" name="TVNOW - DE" version="2.0.1" provider-name="L0RE">
+<addon id="plugin.video.rtlnow" name="TVNOW - DE" version="2.0.2" provider-name="L0RE">
 	<requires>
 		<import addon="xbmc.python" version="2.25.0"/>
-		<import addon="script.common.plugin.cache" version="2.5.5" optional="true"/>
+		<import addon="script.common.plugin.cache" version="2.6.0" optional="true"/>
 		<import addon="inputstream.adaptive" version="2.0.10"/>
 		<import addon="script.module.inputstreamhelper" version="0.4.0"/>
 	</requires>
@@ -27,10 +27,8 @@
 			<icon>icon.png</icon>
 			<fanart>fanart.jpg</fanart>
 		</assets>
-		<news>[B][COLOR orangered]Version 2.0.1  (01.12.2019)[/COLOR][/B] by realvito[CR]
-- optimized: Script komplett überarbeitet und wieder funktionsfähig gemacht, unnötige Passagen entfernt (läuft über die alte API v3) ...
-- added: Addon kompatibel mit PYTHON-Vers.3 gemacht (für KODI-19+) :-)
-*** für die volle Funktionsfähigkeit unter KODI-Matrix ist das Addon - script.common.plugin.cache - mindestens in der Version 2.6.0 erforderlich ***
+		<news>[B][COLOR orangered]Version 2.0.2  (22.12.2019)[/COLOR][/B] by realvito[CR]
+- fixed: In der Rubrik = LiveTV werden teilweise keine Bilder angezeigt
 		</news>
 	</extension>
 </addon>
